carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_nested_map_diff.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  ~ awscc.ec2.Vpc vpc
      config:
          settings:
            ~ mode: "basic" → "advanced"
            ~ timeout: "30" → "60"
      # (1 unchanged attribute hidden)
        │
        └─ + awscc.ec2.Subnet awscc_ec2_subnet_896cf31f
              cidr_block: "10.0.1.0/24"
              vpc_id: "vpc-0123456789abcdef0"

Plan: 1 to add, 1 to change, 0 to destroy.
