carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_no_changes_enum.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.ec2.Subnet 
      availability_zone: "ap-northeast-1a"
      cidr_block: "10.0.1.0/24"
      tags:
        Name: "test-subnet"
      vpc_id: "vpc-0123456789abcdef0"
  - awscc.ec2.Subnet ec2_subnet_f5269366

Plan: 1 to add, 0 to change, 1 to destroy.
