carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_pretty_long_string_list.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.iam.Role awscc_iam_role_a707aa80
      managed_policy_arns: [
        "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess",
        "arn:aws:iam::aws:policy/AmazonEC2ReadOnlyAccess",
        "arn:aws:iam::aws:policy/IAMReadOnlyAccess",
      ]
      role_name: "test-role"

Plan: 1 to add, 0 to change, 0 to destroy.
