carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_pretty_short_string_list.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.iam.Role awscc_iam_role_dae1177d
      role_name: "short-list-test"
      short_tags: ["a", "b", "c"]

Plan: 1 to add, 0 to change, 0 to destroy.
