carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_provider_prefix.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
assertion_line: 823
expression: output
---
Execution Plan:

  - awscc.ec2.Vpc awscc_ec2_vpc_fb75c929

Plan: 0 to add, 0 to change, 1 to destroy.
