carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_replace_create_only.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  -/+ test.test.Widget alpha (must be replaced)
      external_name: "old" → "new" (forces replacement)
  -/+ test.test.Widget beta (must be replaced)
      legacy_token: "tok" → (removed) (forces replacement)

Plan: 0 to add, 0 to change, 2 to replace, 0 to destroy.
