carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_replace_with_non_forcing_diffs.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  - test.test.Widget web_acl
  + test.test.Widget web_acl
      description: "new description"
      external_name: "edge-new"
      metric_name: "edge-new-metric"
      scope: "CLOUDFRONT"

Plan: 1 to add, 0 to change, 1 to destroy.
